# AegisAgent

./: .gitignore  LICENSE  README.md
config/: agent.yml
modules/process_monitor/: Cargo.toml  README.md
modules/process_monitor/src/: main.rs
supervisor/: go.mod  go.sum
supervisor/cmd/supervisor/: main.go
supervisor/internal/config/: config.go
supervisor/internal/ipc/: factory_fallback.go  factory_unix.go  factory_windows.go  ipc.go  namedpipe_windows.go  unixsocket_unix.go
supervisor/internal/logging/: logging.go
supervisor/internal/modules/: manager.go  resource_common.go  resource_darwin.go  resource_default.go  resource_linux.go  resource_windows.go
supervisor/internal/supervisor/: supervisor.go
