[package]
name = "process_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "namedpipeapi", "handleapi", "synchapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
